force-app/main/default/objects/ChecklistQuestionResponse__c/ChecklistQuestionResponse__c.object-meta.xml
<CustomObject>
    <label>Checklist Question Response</label>
    <nameField>
        <label>Question Response</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Question Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>