force-app/main/default/objects/ChecklistQuestionResponse__c/fields/Answers__c.field-meta.xml
<CustomField>
    <fullName>Answers__c</fullName>
    <description>This field is used for defining the values for checkboxes, radio and drop-down types of question. Format: Each value should be written on a separate line.</description>
    <label>Answers</label>
    <type>TextArea</type>
</CustomField>