force-app/main/default/objects/ChecklistQuestionResponse__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field contains the checklist template with which is connected to.</description>
    <label>Checklist</label>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Checklist Question Response</relationshipLabel>
    <relationshipName>Checklist</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>