force-app/main/default/objects/ChecklistQuestionResponse__c/fields/ChecklistQuestion__c.field-meta.xml
<CustomField>
    <fullName>ChecklistQuestion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field contains the checklist question used for creating the actual question.</description>
    <label>Checklist Question</label>
    <referenceTo>ChecklistQuestion__c</referenceTo>
    <relationshipLabel>Checklist Question Responses</relationshipLabel>
    <relationshipName>Checklist_Questions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>