force-app/main/default/objects/ChecklistQuestionResponse__c/fields/QuestionText__c.field-meta.xml
<CustomField>
    <fullName>QuestionText__c</fullName>
    <description>This field contains the actual question text.</description>
    <label>Question Text</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>