force-app/main/default/objects/ChecklistQuestionResponse__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>This field stores the response to the actual question.</description>
    <inlineHelpText>This field stores the response to the actual question.</inlineHelpText>
    <label>Response</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>