force-app/main/default/objects/ChecklistQuestionResponse__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field contains the visit for which the actual question was created.</description>
    <inlineHelpText>This field contains the visit for which the actual question was created.</inlineHelpText>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Checklist Question Responses</relationshipLabel>
    <relationshipName>Checklist_Question_Responses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>